<resources>
    <string name="app_name">CodeforcesApplication</string>

    <!--Экран списка контестов-->
    <string name="contestsList">Списки контестов</string>
    <string name="upcomingContests">Предстоящие</string>
    <string name="currentContests">Текущие</string>
    <string name="pastContests">Прошедшие</string>

    <string name="emptyUncommingContestsList">Предстоящих соревнований нет</string>
    <string name="emptyCurrentContestsList">Текущих соревнований нет</string>
    <string name="emptyPastContestsList">Прошедших соревнований нет</string>

    <string name="contest_name">Название контеста</string>
    <string name="contest_start">Начало:</string>
    <string name="contest_duration">Длительность:</string>
    <string name="contest_is_not_started">Данный контест еще не начался</string>

    <!--Экран детализация контеста-->
    <string name="problems">Задачи</string>
    <string name="standings">Результаты</string>

    <!--Экран детализация контеста. Экран списка задач-->
    <string name="item_problem_score_label">Количество баллов:</string>
    <string name="problemsListIsEmpty">Список задач пуст</string>

    <!--Экран детализация контеста. Экран таблицы результатов-->
    <string name="standingsListIsEmpty">Результаты не известны</string>

    <!--Экран информации о команде-->
    <string name="commandMembersListIsEmpty">Список членов команды пуст</string>

    <!--Экран информации о пользователе-->
    <string name="userMainInfo">Основное</string>
    <string name="userSocialInfo">Социальное</string>
    <string name="userRatingInfo">Рейтинг</string>

    <string name="userFirstName">Имя:</string>
    <string name="userLastName">Фамилия:</string>
    <string name="userCountry">Страна:</string>
    <string name="userCity">Город:</string>
    <string name="userRegistration">Зарегистрирован:</string>

    <string name="userEmail">email:</string>
    <string name="userVkId">vkId:</string>
    <string name="userOpenId">openId:</string>
    <string name="userFriendsOfCount">Количество друзей:</string>

    <string name="userContribution">Вклад:</string>
    <string name="userCurrentRating">Текущий рейтинг:</string>
    <string name="userMaxRating">Максимальный рейтинг:</string>
    <string name="userRatingDetails">Детализация рейтинга</string>

    <!--Экран детализации рейтинга-->
    <string name="activityRatingDetailsTitle">Детализация рейтинга %s</string>
    <string name="ratingChangeListIsEmpty">Пользователь не участвовал в соревнованиях</string>

    <!--другое-->
    <string name="unknown">неизвестно</string>
    <string name="noConnectionServer">Нет соединения с сервером</string>

</resources>
