<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/ripple"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mainInfoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userMainInfo"
            android:textColor="@color/item_two_line_subtitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userFirstName"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainInfoTitle" />

        <TextView
            android:id="@+id/firstNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstNameLabel"
            app:layout_constraintTop_toTopOf="@+id/firstNameLabel" />

        <TextView
            android:id="@+id/lastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userLastName"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

        <TextView
            android:id="@+id/lastNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lastNameLabel"
            app:layout_constraintTop_toTopOf="@+id/lastNameLabel" />

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userCountry"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />

        <TextView
            android:id="@+id/userCountryView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryLabel"
            app:layout_constraintTop_toTopOf="@+id/countryLabel" />

        <TextView
            android:id="@+id/cityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userCity"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryLabel" />

        <TextView
            android:id="@+id/userCityView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cityLabel"
            app:layout_constraintTop_toTopOf="@+id/cityLabel" />

        <TextView
            android:id="@+id/registrationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userRegistration"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityLabel" />

        <TextView
            android:id="@+id/userRegistrationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registrationLabel"
            app:layout_constraintTop_toTopOf="@+id/registrationLabel" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>