<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userRatingDetailsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/ripple"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp"
    app:contentPaddingBottom="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ratingInfoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userRatingInfo"
            android:textColor="@color/item_two_line_subtitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contributionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userContribution"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingInfoTitle" />

        <TextView
            android:id="@+id/userContributionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contributionLabel"
            app:layout_constraintTop_toTopOf="@+id/contributionLabel" />

        <TextView
            android:id="@+id/currentRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userCurrentRating"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contributionLabel" />

        <TextView
            android:id="@+id/userCurrentRatingView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currentRatingLabel"
            app:layout_constraintTop_toTopOf="@+id/currentRatingLabel" />

        <TextView
            android:id="@+id/maxRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/userMaxRating"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userCurrentRatingView" />

        <TextView
            android:id="@+id/userMaxRatingView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/maxRatingLabel"
            app:layout_constraintTop_toTopOf="@+id/maxRatingLabel" />

        <TextView
            android:id="@+id/userRatingDetailsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center_vertical|end"
            android:minHeight="@dimen/item_one_line_min_height"
            android:text="@string/userRatingDetails"
            android:textColor="@color/item_two_line_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userMaxRatingView" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>